--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "scripts": {
+    "start": "node index.js",
+    "build": "your_build_command_here"
+  },
+  
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
