--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "start": "node index.js",
     "build": "your_build_command_here"
   },
-  
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "node": "^18.20.6",
