--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "knex": "^3.1.0",
     "node": "^18.20.6",
     "pg": "^8.13.1"
   }
