--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,11 @@
     "build": "your_build_command_here"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "node": "^18.20.6",
     "pg": "^8.13.1"
